add update endpoints
